fix button z-index

--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -20,7 +20,7 @@ pre {
         align-self: flex-start;
         justify-self: flex-end;
 
-        z-index: 2;
+        z-index: 1;
         cursor: pointer;
         min-width: 68px;
         justify-content: center;
